add ts-md5, core folder and core module, add auth,loggger service,ng test successfully

--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -7,7 +7,17 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "paths": {
+      "@shared": [ "app/shared" ],
+      "@shared/*": [ "app/shared/*" ],
+      "@core": [ "app/core/" ],
+      "@core/*": [ "app/core/*" ],
+      "@testing": [ "testing/" ],
+      "@testing/*": [ "testing/*" ],
+      "@env": [ "environments/" ],
+      "@env/*": [ "environments/*" ]
+    }
   },
   "files": [
     "test.ts"
