--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,17 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [],
+    "paths": {
+      "@shared": [ "app/shared" ],
+      "@shared/*": [ "app/shared/*" ],
+      "@core": [ "app/core/" ],
+      "@core/*": [ "app/core/*" ],
+      "@testing": [ "testing/" ],
+      "@testing/*": [ "testing/*" ],
+      "@env": [ "environments/" ],
+      "@env/*": [ "environments/*" ]
+    }
   },
   "exclude": [
     "test.ts",
