--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,17 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": "src/",
+    "paths": {
+      "@shared": [ "app/shared" ],
+      "@shared/*": [ "app/shared/*" ],
+      "@core": [ "app/core/" ],
+      "@core/*": [ "app/core/*" ],
+      "@testing": [ "testing/" ],
+      "@testing/*": [ "testing/*" ],
+      "@env": [ "environments/" ],
+      "@env/*": [ "environments/*" ]
+    }
   }
 }
