--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
-    "ng-zorro-antd": "^0.6.15",
+    "ng-zorro-antd": "^0.7.0-beta.4",
     "rxjs": "^5.5.6",
     "ts-md5": "^1.2.4",
     "zone.js": "^0.8.19"
